# slonk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: index.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: concepts.md  handlers.md  middleware.md  overview.md  parallel.md  recipes.md
docs/reference/: builtin_middleware.md  handlers.md  index.md  internals.md  middleware.md  pipeline.md  roles.md
src/slonk/: __init__.py  base.py  builtin_middleware.py  constants.py  handlers.py  middleware.py  pipeline.py  queue.py  roles.py  streaming.py
tests/: README.md  conftest.py  helpers.py  test_cloud_handler.py  test_combinators.py  test_edge_cases.py  test_middleware.py  test_parallel.py  test_path_handler.py  test_real_world.py  test_slonk.py
