[project]
name = "slonk"
version = "0.1.1"
description = "Experiment in typed pipelining of data between python, shell and various data sources and sinks."
authors = [
    { name = "Matt Oates", email = "mattoates+support@gmail.com" }
]
dependencies = [
    "universal-pathlib>=0.3.10",
    "sqlalchemy>=2.0.32",
    "cloudpickle>=3.1.0",
]
readme = "README.md"
requires-python = ">= 3.14"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.15.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/slonk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "sync_only: test only runs in sequential mode — does not use run_pipeline fixture",
    "parallel_only: test only runs in parallel/streaming mode — does not use run_pipeline fixture",
]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["slonk"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "cloudpickle.*"
ignore_missing_imports = true
follow_untyped_imports = false

